# dunetrg-cards

./: .gitignore  setup_env.sh
cards/vd/: eminus_vd_detsim.yaml  eminus_vd_g4.yaml  mu_minus_vd_g4.yaml
condor/vd/: eminus_1x8x14_pipeline_v2.yaml  gen_test_1x8x14_pipeline.yaml  radbkg_1x8x14_pipeline.yaml  vd-1x8x14_ar39_pipeline.yaml  (+10 more)
fcl/: runana_AbsRS.fcl  runana_RS.fcl  runana_ST.fcl  trig_studies_tpg_st_rs_ars.fcl
pipelines/: cfg_parser.sh  example.sh  example.yaml  example_map.sh  example_yaml_cfg.sh  vd-1x8x14-haiwang-detsim-tpg-anatree.yaml  vd-1x8x14_ar39-3sig.yaml  vd-1x8x14_marley.yaml  vd-1x8x14_marleyyaml  vd-1x8x14_muminus_tomox.yaml  vd-1x8x14_muminus_tomoz.yaml  vd-1x8x14_muminus_tomoz_rolling.yaml  vd-1x8x14_radbkg.3sig.yaml  vd-1x8x14_radbkg.yaml  vd-1x8x14_single_eminus.yaml  vd-1x8x14_single_gamma.yaml  vd-1x8x14_single_muminus.yaml  vd-1x8x14_validation.yaml  vd-1x8x6_validation.yaml  vd_1x8x14-haiwang-hydra-detsim-tpg-anatree.yaml  vd_ar39.yaml  vd_ar39_1x8x14.yaml  vd_gen_test_1x8x14.yaml  vd_genie_1x8x6.yaml  vd_marley_1x8x14.yaml  vd_muminus_tomox_1x8x14.yaml  vd_muminus_tomoz_1x8x14.yaml  vd_radbkg_1x8x14-3sig.yaml  vd_radbkg_1x8x14.yaml  vd_radbkg_1x8x14_detsim_tpg.yaml  vd_radbkg_1x8x14_gen_g4.yaml  vd_radbkg_gammafilter_1x8x14.yaml  vd_radiols.yaml  vd_radiols_1x8x14.yaml  vd_radiols_1x8x14_detsim_tpg.yaml  vd_radiols_1x8x14_gen.yaml  vd_radiols_1x8x14_gen_g4.yaml  vd_radiols_gammafilter_1x8x14.yaml  vd_single_eminus.json  vd_single_eminus.jsonc  (+8 more)
pipelines/runner/: lar-runner  pyproject.toml
pipelines/runner/src/: main.py
(+71 files in other folders)
